crates/service/tests/completion/snapshots/features__completion__block__block_type.snap
---
source: crates/service/tests/completion/block.rs
expression: response
---
[
  {
    "label": "$b",
    "labelDetails": {
      "description": "[i32, i32]"
    },
    "kind": 6,
    "detail": "(if $b (result i32) (result i32))"
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block)"
  },
  {
    "label": "2",
    "labelDetails": {
      "description": "[i32]"
    },
    "kind": 6,
    "detail": "(block (param i32) (param i32) (result i32))"
  },
  {
    "label": "$a",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block $a)"
  },
  {
    "label": "4",
    "labelDetails": {
      "description": "[i32]"
    },
    "kind": 6,
    "detail": "(loop (result i32))"
  }
]
