crates/service/tests/completion/snapshots/features__completion__block__blocks_following_dollar.snap
---
source: crates/service/tests/completion/block.rs
expression: response
---
[
  {
    "label": "$b",
    "kind": 6,
    "insertText": "b"
  },
  {
    "label": "$a",
    "kind": 6,
    "insertText": "a"
  }
]
