crates/service/tests/completion/snapshots/features__completion__block__blocks_following_int_idx.snap
---
source: crates/service/tests/completion/block.rs
expression: response
---
[
  {
    "label": "$b",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block $b)",
    "textEdit": {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 25
        }
      },
      "newText": "$b"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block)",
    "textEdit": {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 25
        }
      },
      "newText": "1"
    }
  },
  {
    "label": "2",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block)",
    "textEdit": {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 25
        }
      },
      "newText": "2"
    }
  },
  {
    "label": "$a",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block $a)",
    "textEdit": {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 25
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "4",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block)",
    "textEdit": {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 25
        }
      },
      "newText": "4"
    }
  }
]
